# SoftmaxKernel

SoftmaxKernel/: README.md  benchmark.py  benchmark_results.json  example_helion_winner.py  pyproject.toml  softmax_eager.py  softmax_helion.py  softmax_triton.py
VLM/: VLM.MD
VLM/PatchEmbedding/: benchmark.py  benchmark_results.json  patch_embedding_eager.py  patch_embedding_helion.py  patch_embedding_triton.py  pyproject.toml
VLM/PatchEmbedding/Optimized/: benchmark_triton.py  triton_benchmark_results.json
attention/b200helion/: b200_attention.py  benchmark_helion.py  benchmark_results.json  helion.md  main.py  pyproject.toml  test1.md  test2.md
attention/b200triton/: README.md  flash_attention.py  main.py  pyproject.toml  triton.md
