[project]
name = "patch-embedding-kernels"
version = "0.1.0"
description = "Patch Embedding kernel benchmarks for Vision Transformers on H100 SXM GPU"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.1.0",
    "triton>=2.1.0",
    "helion @ git+https://github.com/pytorch/helion.git",
]

# Note: pytorch-helion is only available from GitHub, not PyPI
# Install manually with: pip install git+https://github.com/pytorch/helion.git
# The patch_embedding_helion.py script will fall back to PyTorch if helion is not installed

[dependency-groups]
dev = [
    "pytest",
    "matplotlib",
]
